# radius-auth-next

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE_PLAN.md  CLIENT_EXAMPLES.md  COMPLETE_IMPLEMENTATION.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  MCP_OAUTH_GUIDE.md  Makefile  README.md  TESTING_GUIDE.md  alembic.ini  docker-compose.yml  env.example  pyproject.toml  pytest.ini  requirements.txt  run_tests.py
alembic/: env.py
app/: __init__.py  main.py
app/config/: __init__.py  database.py  settings.py
app/constants/: __init__.py  status_codes.py
app/decorators/: __init__.py  permissions.py
app/dependencies/: __init__.py  auth.py  database.py  services.py
app/middleware/: __init__.py  auth_middleware.py  csrf_middleware.py  exception_handler.py  logging_middleware.py  rate_limit.py
app/models/: __init__.py  api_key.py  base.py  membership.py  oauth_client.py  oauth_identity.py  organization.py  session.py  user.py
app/policies/: __init__.py  base_policy.py  decorators.py  guards.py  organization_policy.py  resource_policy.py  session_policy.py  user_policy.py
app/routers/: __init__.py  auth.py  base.py  oauth.py  organizations.py  sessions.py  users.py
app/schemas/: __init__.py  auth.py  common.py  oauth.py  organization.py  session.py  user.py
app/services/: __init__.py  auth_service.py  client_service.py  jwt_service.py  oauth_service.py  organization_service.py  session_service.py  user_service.py
app/utils/: __init__.py  device_detection.py  exceptions.py  response_builders.py  security.py  transaction_manager.py  validators.py
scripts/: test_code.py
tests/: conftest.py  tests.md
tests/integration/: test_api_key_auth.py  test_browser_auth.py  test_decorators_comprehensive.py  test_mobile_auth.py  test_oauth_auth.py  test_permissions_comprehensive.py  test_security_scenarios.py  test_session_management.py  test_transaction_atomicity.py
